--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
         section {
             display: flex; align-items: center; justify-content: center;
-            padding: 50px 20px; /* Կրճատված է 100px-ից */
+            padding: 50px 20px;
             scroll-margin-top: 70px;
         }
 
-        #home { min-height: 80vh; } /* Միայն գլխավորն է մնում մեծ */
+        #home { min-height: 80vh; }
 
         .profile-img {
             width: 180px; height: 180px;
@@ -123,7 +123,7 @@
             background: var(--card-bg);
             border: 1px solid rgba(125, 125, 125, 0.1);
             backdrop-filter: blur(25px);
-            padding: 35px; /* Փոքրացված 50px-ից */
+            padding: 35px;
             border-radius: 30px;
             max-width: 800px;
             width: 100%;
@@ -288,8 +288,13 @@
 <section id="contact">
     <div class="glass-card" style="text-align: center;" data-aos="flip-up">
         <h2 style="color: var(--accent); font-size: 1.8rem; margin-bottom: 20px;">Կապ իմ հետ</h2>
-        <p style="margin: 10px 0;"><i class="fas fa-envelope" style="color: var(--accent)"></i> arman.gomcyan21@gmail.com</p>
+
+        <a href="mailto:arman.gomcyan21@gmail.com?subject=" class="hobby-btn" style="margin-bottom: 25px;">
+            <i class="fas fa-envelope"></i> ՈՒՂԱՐԿԵԼ GMAIL-ՈՎ
+        </a>
+
         <p style="margin: 10px 0;"><i class="fas fa-phone" style="color: var(--accent)"></i> +374 55 76 00 94</p>
+
         <div style="display: flex; justify-content: center; gap: 15px; margin-top: 25px;">
             <a href="https://www.instagram.com/arm_games16" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/@arman.pro9916" class="social-icon" target="_blank"><i class="fab fa-youtube"></i></a>
