--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             border: none;
             color: #fff;
             cursor: pointer;
-            width: 30px; height: 30px;
+            width: 35px; height: 35px;
             border-radius: 50%;
             margin-left: 8px;
             display: flex; align-items: center; justify-content: center;
@@ -94,8 +94,6 @@
             padding: 50px 20px;
             scroll-margin-top: 70px;
         }
-
-        #home { min-height: 80vh; }
 
         .profile-img {
             width: 180px; height: 180px;
@@ -155,11 +153,7 @@
         .img-left { right: 110%; transform: translateY(-50%) translateX(-20px) scale(0.8); }
         .img-right { left: 110%; transform: translateY(-50%) translateX(20px) scale(0.8); }
 
-        .hobby-item:hover .hover-img {
-            opacity: 1;
-            visibility: visible;
-        }
-
+        .hobby-item:hover .hover-img { opacity: 1; visibility: visible; }
         .hobby-item:hover .img-left, .hobby-item:hover .img-right { transform: translateY(-50%) translateX(0) scale(1); }
 
         .hobby-btn {
@@ -172,6 +166,8 @@
             display: inline-block;
             transition: 0.4s;
             font-size: 0.9rem;
+            border: none;
+            cursor: pointer;
         }
 
         .info-box {
@@ -193,8 +189,6 @@
             border: 1px solid rgba(125, 125, 125, 0.2); text-decoration: none;
         }
 
-        .social-icon:hover { background: var(--accent); color: #fff; transform: translateY(-5px); }
-
         .back-to-top {
             position: fixed; bottom: 30px; right: 30px;
             background: var(--accent); color: #fff; width: 45px; height: 45px;
@@ -202,16 +196,13 @@
             z-index: 1000; text-decoration: none; box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
-        footer { padding: 30px; text-align: center; color: var(--info-text); font-size: 0.9rem; }
-
         @media (max-width: 768px) {
             section { padding: 40px 15px; }
             .hobby-item { display: flex; flex-direction: column; align-items: center; margin: 20px 0; }
             .hover-img { position: static; opacity: 1; visibility: visible; width: 160px; margin-bottom: 10px; transform: none !important; }
             .glass-card { padding: 25px 15px; width: 95%; }
-            nav { width: 90%; top: 10px; justify-content: space-between; padding: 5px 15px; }
+            nav { width: 95%; top: 10px; justify-content: space-between; padding: 5px 15px; }
             nav a { margin: 0 5px; font-size: 0.6rem; }
-            h1 { font-size: 2.2rem; }
             .back-to-top { display: flex !important; bottom: 20px; right: 20px; }
         }
     </style>
@@ -230,10 +221,9 @@
 
 <section id="home">
     <div style="text-align: center;" data-aos="zoom-in">
-        <img src="My-photo.jpg" alt="Արման Գոմցյան" class="profile-img">
+        <img src="My-photo.jpg" alt="Արման" class="profile-img">
         <p style="letter-spacing: 3px; color: var(--accent); font-weight: 800; margin-top: 25px; font-size: 0.8rem;">ՈՂՋՈՒՅՆ</p>
         <h1>Արման Գոմցյան</h1>
-        <div style="height: 3px; width: 50px; background: var(--accent); margin: 15px auto; border-radius: 10px;"></div>
         <p style="color: var(--info-text); font-weight: 600; letter-spacing: 2px; font-size: 0.9rem;">FUTURE DEVELOPER</p>
     </div>
 </section>
@@ -250,13 +240,10 @@
 <section id="hobbies">
     <div class="glass-card" style="text-align: center;" data-aos="fade-right">
         <h2 style="font-size: 1.8rem; margin-bottom: 10px;">Իմ հոբիները</h2>
-        <p style="color: var(--info-text); margin-bottom: 30px;">Բացահայտիր իմ նախասիրությունները:</p>
-
         <div class="hobby-item">
             <img src="Noah.png" class="hover-img img-left" alt="Ֆուտբոլ">
             <a href="#football-info" class="hobby-btn">⚽ ՖՈՒՏԲՈԼ</a>
         </div>
-
         <div class="hobby-item">
             <img src="Mootq.IT.png" class="hover-img img-right" alt="Ծրագրավորում">
             <a href="#coding-info" class="hobby-btn">💻 Ծրագրավորում</a>
@@ -276,9 +263,7 @@
 <section id="coding-info">
     <div class="glass-card" data-aos="fade-up">
         <h2 style="color: var(--accent); font-size: 1.8rem; text-align: center; margin-bottom: 20px;">💻 Ծրագրավորում</h2>
-        <div class="info-box">
-            Սովորում եմ Mootq IT դպրոցում 2025 թվականի հուլիսից։ Ներքևում կարող եք տեսնել իմ հմտությունները։
-        </div>
+        <div class="info-box">Սովորում եմ Mootq IT դպրոցում 2025 թվականի հուլիսից։</div>
         <div style="margin-top: 30px; text-align: center;">
             <span class="skill-badge">HTML / CSS</span>
             <span class="skill-badge">Python</span>
@@ -292,9 +277,9 @@
     <div class="glass-card" style="text-align: center;" data-aos="flip-up">
         <h2 style="color: var(--accent); font-size: 1.8rem; margin-bottom: 20px;">Կապ իմ հետ</h2>
 
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=arman.gomcyan21@gmail.com" target="_blank" class="hobby-btn" style="margin-bottom: 25px;">
+        <button onclick="openGmail()" class="hobby-btn" style="margin-bottom: 25px;">
             <i class="fas fa-envelope"></i> ՈՒՂԱՐԿԵԼ GMAIL-ՈՎ
-        </a>
+        </button>
 
         <p style="margin: 10px 0;"><i class="fas fa-phone" style="color: var(--accent)"></i> +374 55 76 00 94</p>
 
@@ -307,13 +292,11 @@
 
 <a href="#home" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
 
-<footer>
-    <p>© 2026 <b>Arman Gomtsyan</b></p>
-</footer>
-
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init({ duration: 800, once: true });
+
+    // Mode Toggle
     const modeToggle = document.getElementById('mode-toggle');
     const icon = modeToggle.querySelector('i');
     modeToggle.addEventListener('click', () => {
@@ -321,6 +304,22 @@
         icon.classList.toggle('fa-moon');
         icon.classList.toggle('fa-sun');
     });
+
+    // Խելացի Gmail բացելու ֆունկցիա
+    function openGmail() {
+        const recipient = "arman.gomcyan21@gmail.com";
+        const subject = "";
+        const mailtoUrl = `mailto:${recipient}?subject=${encodeURIComponent(subject)}`;
+
+        if (/Android|iPhone|iPad|iPod/i.test(navigator.userAgent)) {
+            // Հեռախոսով բացում է mailto (հավելվածը)
+            window.location.href = mailtoUrl;
+        } else {
+            // Համակարգչով բացում է Gmail-ի վեբ էջը
+            const gmailUrl = `https://mail.google.com/mail/?view=cm&fs=1&to=${recipient}`;
+            window.open(gmailUrl, '_blank');
+        }
+    }
 </script>
 
 </body>
